# python-final-diplom

./: .gitignore  Docker-compose.yml  Dockerfile  README.md  pyproject.toml  requirements.txt  schema.yml  setup.py
orders/backend/: admin.py  models.py  permissions.py  serialyzers.py  tasks.py  urls.py  utils.py  views.py
orders/backend/logic/: order.py  user.py  utils.py
orders/backend/migrations/: 0001_initial.py
orders/backend/templates/: template_new_order.html
orders/backend/tests/: test_app.py
orders/orders/: .env_temp  settings.py  urls.py
tests/: test_app.py
