[tool.poetry]
name = "python-final-diplom"
version = "0.1.0"
description = ""
authors = ["Andrey Shishov <a.5920311@yandex.ru>"]
readme = "README.md"
packages = [{include = "python_final_diplom"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "2.2.16"
pytz = "2018.5"
environ = "^1.0"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
